@@ -2,6 +2,7 @@
 v3.2.8-git
 ----------
 
+[jan] Fix editing shared rulesets (Bug #12694).
 [jan] Allow to edit permissions of another user's rules if that user assigned
       ownership.
 [jan] Use access rules compatible with both Apache 2.2 and 2.4.
